# easy_control

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: clang-tidy.yml  cmake-multi-platform.yml  docs.yml  release.yml  sanitizer.yml
cmake/: autoalg_allConfig.cmake.in  autoalg_input_simConfig.cmake.in  easy_controlConfig.cmake.in  easy_control_version.h.in
demo/: demo.cpp  joint_test.cpp  main.cpp  rts_game_demo.cpp  streaming_control_demo.cpp
include/: autoalg_mac_bridge.h  autoalg_mac_bridge.mm  common.hpp  inputs.hpp  mac_bridge.h  mac_bridge.mm  macro.h  screen_capture.hpp  screen_capture_linux_wayland_portal.cpp  screen_capture_linux_x11.cpp  screen_capture_mac.cpp  screen_capture_win.cpp  system_input.hpp  system_output.hpp  system_output_linux_wayland_portal.cpp  system_output_linux_x11.cpp  system_output_mac.cpp
